[gd_scene load_steps=2 format=3 uid="uid://1ytal74xoqq5"]

[ext_resource type="Script" path="res://Player/changetanks.gd" id="1_w3lqn"]

[node name="changetanks" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w3lqn")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -740.0
offset_top = -835.0
offset_right = 740.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 400

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 150

[node name="none" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "NONE"

[node name="oxygen" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "OXYGEN"

[node name="water" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "WATER"

[node name="fire" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "FIRE"

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "BACK"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 150

[node name="none2" type="Button" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "NONE"

[node name="oxygen2" type="Button" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "OXYGEN"

[node name="water2" type="Button" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "WATER"

[node name="fire2" type="Button" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "FIRE"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/none" to="." method="_on_none_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/oxygen" to="." method="_on_oxygen_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/water" to="." method="_on_water_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/fire" to="." method="_on_fire_pressed"]
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/none2" to="." method="_on_none_2_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/oxygen2" to="." method="_on_oxygen_2_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/water2" to="." method="_on_water_2_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/fire2" to="." method="_on_fire_2_pressed"]
